# spinny

./: LICENSE  README.md  pyproject.toml  spin.py  spinny.py
