[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spinny"
author = "Pradhyum R"
author-email = "drpradhyum2016@outlook.com"
home-page = "https://github.com/techieji/spin"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
